--- a/assets/styles/claris/_components.scss
+++ b/assets/styles/claris/_components.scss
@@ -177,7 +177,7 @@
       flex: 1 1 10%;
       background: var(--bg);
       min-width: calc(min(100%, (hugo.$screenViewBreakpointWidthWide - 1 * var(--inner_margin)) / 2));
-      @include variables.drop-shadow(3rem, 0.1, 0.1);
+      @include variables.drop-shadow-inset(3rem, 0.1, 0.1);
       @include variables.color-scheme_transition;
       @include variables.inner_padding;
       @media screen and (min-width: hugo.$screenViewBreakpointWidthWide) {
@@ -1191,7 +1191,7 @@ svg.qrcode-svg {
     width: 100%;
     height: auto;
     border-radius: 0.25rem;
-    background: var(--bg);
+    background: var(-theme-xhaze);
     display: flex;
     flex-direction: column;
     flex: 0 0 100%;
@@ -1203,7 +1203,7 @@ svg.qrcode-svg {
     &:last-child {
       margin-bottom: 0;
     }
-    @include variables.drop-shadow(3rem, 0.1, 0.3);
+    @include variables.drop-shadow-inset(3rem, 0.2, 0.4);
     & > a {
       display: flex;
       flex-direction: column;
@@ -1213,7 +1213,7 @@ svg.qrcode-svg {
       &:hover,
       &:focus {
         color: var(--text-hover);
-        background: var(--bg-hover);
+        background: var(-theme-xxxhaze);
       }
     }
   }
